test/sema/negative/mutual_trait_refs.impala
// these traits are not implementable
trait S[A: T[int]] {}
trait T[B: S[int]] {}
